syntax = "proto3";

option csharp_namespace = "AuthServer";

package externalAuth;

service ExternalAuthRpcService {
	rpc GoogleLogin (GoogleLoginRequest) returns (ExternalLoginResponse);
	rpc SpotifyLogin (SpotifyLoginRequest) returns (ExternalLoginResponse);
}

message GoogleLoginRequest {
	string id_token = 1;
	string redirect_url = 2;
}

message SpotifyLoginRequest {
	string auth_code = 1;
	string redirect_url = 2;
}

message ExternalLoginResponse {
	string access_token = 1;
	string refresh_token = 2;
}