syntax = "proto3";

option csharp_namespace = "AuthServer";

package auth;

service LocalAuthGrpcService {
	rpc Login (LocalLoginRequest) returns (LocalLoginResponse);
	rpc Register (LocalRegistrationRequest) returns (LocalRegistrationResponse);
	rpc RefreshAccessToken (LocalUserRefreshAccessTokenRequest) returns (LocalLoginResponse);
}

message LocalLoginRequest {
	string emailAddress = 1;
	string password = 2;
}

message LocalLoginResponse {
	string accessToken = 1;
	string refreshToken = 2;
}

message LocalRegistrationRequest {
	string emailAddress = 1;
	string name = 2;
	string password = 3;
}

message LocalRegistrationResponse {
}

message LocalUserRefreshAccessTokenRequest {
	string refreshToken = 1;
}
